style(theme): update primary lighter color variable

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,7 +2,7 @@
 
 :root {
   --primary: #ff7000;
-  --primary-lighter: #fff1e6;
+  --primary-lighter: #ff8322;
   --primary-foreground: #fafafa;
   --accent: #1da1f2;
 
